--- a/myApp/src/app/login/login.page.html
+++ b/myApp/src/app/login/login.page.html
@@ -33,10 +33,10 @@
 
 
     <ion-segment [(ngModel)]="valuedegree" (ionChange)="segmentChanged(valuedegree)">
-      <ion-segment-button value="1">
+      <ion-segment-button value="customer">
         <ion-label style="font-family: 'Sarabun', sans-serif;">ลูกค้า</ion-label>
       </ion-segment-button>
-      <ion-segment-button value="2">
+      <ion-segment-button value="owner">
         <ion-label style="font-family: 'Sarabun', sans-serif;">เจ้าของสนาม</ion-label>
       </ion-segment-button>
     </ion-segment>
