--- a/myApp/src/app/partofpage/editfield/editfield.page.html
+++ b/myApp/src/app/partofpage/editfield/editfield.page.html
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="background" style="font-family: 'Sarabun', sans-serif;">
+<ion-content class="background" *ngFor="let data of this.datafield" style="font-family: 'Sarabun', sans-serif;">
   <div class="ion-padding sizeimage centeredit" style="">
     <img src="assets/img/noimage.png" class="rounded" alt="...">
   </div>
@@ -22,12 +22,12 @@
   <div class="input-group mb-3">
     <div class="input-group-prepend">
     </div>
-    <input type="text" class="form-control" value="สนามที่ 1  " aria-label="Username" aria-describedby="basic-addon1">
+    <input type="text" class="form-control" value="{{data.name_field}}" id="name_field" aria-label="Username" aria-describedby="basic-addon1">
   </div>
 
   <div class="form-group">
-    <label for="exampleFormControlSelect1">สถานะของสนาม</label>
-    <select class="form-control" id="exampleFormControlSelect1" [(ngModel)]="size_field">
+    <label for="size_field">สถานะของสนาม</label>
+    <select class="form-control" value="{{data.size_field}}"  id="size_field">
       <option>
         5คน
         22 x 42 เมตร
@@ -50,11 +50,11 @@
   <div class="input-group mb-3">
     <div class="input-group-prepend">
     </div>
-    <input type="text" class="form-control" value="600" aria-label="Username" aria-describedby="basic-addon1">
+    <input type="text" id="price_field" value="{{data.price_field}}" class="form-control"  aria-label="Username" aria-describedby="basic-addon1">
   </div>
   <div class="form-group">
-    <label for="exampleFormControlSelect1">สถานะของสนาม</label>
-    <select class="form-control" id="exampleFormControlSelect2" [(ngModel)]="status_field">
+    <label for="status_field">สถานะของสนาม</label>
+    <select class="form-control" id="status_field"value="{{data.status_field}}">
       <option>เปิดให้บริการ</option>
       <option>ไม่เปิดให้บริการ</option>
     </select>
