--- a/myApp/src/app/partofpage/editfield/editfield.page.html
+++ b/myApp/src/app/partofpage/editfield/editfield.page.html
@@ -22,12 +22,12 @@
   <div class="input-group mb-3">
     <div class="input-group-prepend">
     </div>
-    <input type="text" class="form-control" value="{{data.name_field}}" id="name_field" aria-label="Username" aria-describedby="basic-addon1">
+    <input type="text" class="form-control" value="{{data.name_field}}" id="namefield" >
   </div>
 
   <div class="form-group">
-    <label for="size_field">สถานะของสนาม</label>
-    <select class="form-control" value="{{data.size_field}}"  id="size_field">
+    <label for="sizefield">สถานะของสนาม</label>
+    <select class="form-control" value="{{data.size_field}}"  id="sizefield">
       <option>
         5คน
         22 x 42 เมตร
@@ -50,11 +50,11 @@
   <div class="input-group mb-3">
     <div class="input-group-prepend">
     </div>
-    <input type="text" id="price_field" value="{{data.price_field}}" class="form-control"  aria-label="Username" aria-describedby="basic-addon1">
+    <input type="text" id="pricefield" value="{{data.price_field}}" class="form-control"  >
   </div>
   <div class="form-group">
-    <label for="status_field">สถานะของสนาม</label>
-    <select class="form-control" id="status_field"value="{{data.status_field}}">
+    <label for="statusfield">สถานะของสนาม</label>
+    <select class="form-control" id="statusfield"value="{{data.status_field}}">
       <option>เปิดให้บริการ</option>
       <option>ไม่เปิดให้บริการ</option>
     </select>
