--- a/myApp/src/app/partofpage/managefield/managefield.page.html
+++ b/myApp/src/app/partofpage/managefield/managefield.page.html
@@ -35,7 +35,7 @@
           <!--        <td>{{product.address_store}}</td>-->
 
           <td>
-            <ion-icon name="construct-outline" style="width: 25px;height: 25px;" (click)="gotoEdit()"></ion-icon>
+            <ion-icon name="construct-outline" style="width: 25px;height: 25px;" (click)="gotoEdit(datafield.id_field)"></ion-icon>
             <ion-icon name="trash-outline" style="width: 25px;height: 25px;" (click)="presentAlertConfirm(datafield.id_field)"></ion-icon>
           </td>
 
