--- a/myApp/src/app/partofpage/myhome-field/myhome-field.page.html
+++ b/myApp/src/app/partofpage/myhome-field/myhome-field.page.html
@@ -37,7 +37,7 @@
                     </td>
                     <td>{{datafield.name_field}}</td>
                     <td>{{datafield.price_field}}</td>
-                    <td><ion-button style="height: 50px;width: 80px" color="warning">จอง</ion-button></td>
+                    <td><ion-button style="height: 50px;width: 80px" (click)="gotosomething()" color="warning">จอง</ion-button></td>
                 </tr>
             </ng-template>
 
