--- a/myApp/src/app/partofpage/editfield/editfield.page.html
+++ b/myApp/src/app/partofpage/editfield/editfield.page.html
@@ -17,12 +17,12 @@
   <div  class="centerbutton">
     <button type="button" (click)="selectImage()" class="btn btn-link"><ion-icon name="camera-outline"></ion-icon>เพิ่มรูปภาพ</button>
   </div>
-  <div class="padding">
-    <div class="input-group mb-3" (click)="gotodiscount()">
+  <div class="padding" (click)="gotodiscount()"  >
+    <div class="input-group mb-3" >
       <div class="input-group-prepend">
         <br>
       </div>
-      <span class="input-group-text form-control" id="basic-addon3"><ion-icon name="key-outline"> </ion-icon> เปลี่ยนรหัสผ่าน</span>
+      <span class="input-group-text form-control" id="basic-addon3"><ion-icon name="pricetags-outline"></ion-icon> เพิ่มส่วนลด</span>
     </div>
 
   <label>ชื่อสนาม</label>
